--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,7 @@ h1, h2, h3 {
     font-family: 'Open Sans', sans-serif;
 }
 
-body, .navbar{
+.home-callout, .navbar {
     //Gradient provided by @_ighosh at uiGradients.com
     background: #9CECFB;  /* fallback for old browsers */
     background: -webkit-linear-gradient(left, #0052D4, #65C7F7, #9CECFB);
@@ -29,6 +29,14 @@ body, .navbar{
     background: -o-linear-gradient(left, #0052D4, #65C7F7, #9CECFB);
     background: linear-gradient(to right, #0052D4, #65C7F7, #9CECFB);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+}
+
+.home-callout {
+    margin-top: -20px;
+    padding-top: 20px;
+    padding-bottom: 100px;
+    color: white;
+    
 }
 
 .navbar {
