--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
               
               -->
               
-              <%= link_to "/", class: "navbar-brand" do %>
+              <%= link_to root_path, class: "navbar-brand" do %>
                   <i class="fa fa-users"></i>
                   DevMatch
               <%end %>
@@ -35,7 +35,7 @@
             <div class="collapse navbar-collapse" id="main-nav-collapse">
               <ul class="nav navbar-nav navbar-right">
                  <!-- <li><a href="/about">About</a></li> -->
-                <li><%= link_to "About", "about" %></li>
+                <li><%= link_to "About", about_path %></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div>
