--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,6 +53,17 @@ h1, h2, h3 {
     font-weight: 800;
 }
 
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: white;
+}
+
+.navbar-default .navbar-toggle {
+    border: 2px solid white;
+    &:hover, &:focus {
+       background-color: #9CECFB;  
+    }
+}
+
 /* CSS Way of doing it
 .navbar-default .navbar-brand,
 .navbar-default .navbar-nav > li > a{
