--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -15,9 +15,10 @@
     <!--</form>-->
     
     <!--RUBY WAY-->
-    <%= form_for "/contacts" do |f| %>
+    <%= form_for @contact do |f| %>
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
+            <%= flash[:notice] %>
             <div class="well">  
                 <div class="form-group">
                 <%= f.label :name %>
